Se agrega formulario para registro de estudiantes en la base de datos

--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=rds-william-ricardo.cdhao3xz63vm.us-east-2.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bd-william-ricardo
+DB_USERNAME=willi
+DB_PASSWORD=123456789
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
